#
# $Id$
#
# Copyright 2012, Juniper Networks, Inc.
# All rights reserved.
# This SOFTWARE is licensed under the LICENSE provided in the
# ../Copyright file. By downloading, installing, copying, or otherwise
# using the SOFTWARE, you agree to be bound by the terms of that
# LICENSE.
#

pkgdatadir = $(datadir)/juise/import

IMPORT_FILES = \
    junos.xsl \
    lib-phil.slax \
    lib-wizard.slax \
    lib-wizard.txt

EXTRA_DIST = ${IMPORT_FILES}

dist_pkgdata_DATA = ${IMPORT_FILES}
